# multitimeframerev

./: -  .gitignore  CLAUDE.md  REQUIREMENTS.md  Saty Phase Oscillator.txt  Sector Industry.csv  index.html  main stocks.csv  morning_capitulation_scanner_prompt.md  package-lock.json  package.json  staticwebapp.config.json
.github/workflows/: azure-static-web-apps.yml  weekly-research.yml
api/: package-lock.json  package.json  watchlist.json
api/scripts/: cleanup-bad-ocr.mjs  perf-day.mjs  purgeStaleBullTrades.mjs  verify-stats.js
api/src/: app.ts
autoresearch/: README.md  evaluate.py  prepare.py  program.md  pyproject.toml  strategy.py
autoresearch/reports/: 2026-W21.md  EXAMPLE.md
docs/: ABOUT.md  NEXTGEN-TRADING-TAB.md  day-trading-algo-presentation.html  thinkscript-ocr.tos  thinkscript-original.tos
public/: login-required.html
src/: App.tsx  index.css  types.ts
src/components/: CapitulationPage.tsx  CapitulationWatchlistManager.tsx  ConfluenceGrid.tsx  NotificationLog.tsx  PhaseCell.tsx  PhaseGrid.tsx  PhaseOscillatorPage.tsx  ScreenerPage.tsx  SignalCell.tsx  StatusBadge.tsx  WatchlistManager.tsx  WeeklyCapitulationPage.tsx
src/hooks/: useAuth.ts  useMarketHours.ts  useNotifications.ts  useScanPolling.ts
src/services/: api.ts
src/views/: AboutPage.tsx  AtrMatrixPage.tsx  AvwapPage.tsx  BigdIntradayPage.tsx  BullListPage.tsx  CveEvalPage.tsx  DayTradePage.tsx  ErrorBoundary.tsx  GatePage.tsx  MetricsPage.tsx  PerformancePage.tsx  RotationPage.tsx  ToolsPage.tsx  TradingViewPage.tsx  UnusualOptionsPage.tsx
tools/: tv-launch.ps1
(+139 files in other folders)
